--- a/src/text.html
+++ b/src/text.html
@@ -789,10 +789,14 @@
                 <li class="tags__item"><a class="tags__button" href="#">Потеря волос</a></li>
                 <li class="tags__item"><a class="tags__button" href="#">Зоб</a></li>
             </ul>
+
+
         </div>
     </div>
 
     //= template/footer.html
+
+    //= template/float-bar.html
 
     <!--общие скрипты-->
     //= template/scripts.html
