footer + search remake + map

--- a/src/text.html
+++ b/src/text.html
@@ -42,112 +42,7 @@
                 </li>
             </ul>
 
-            <div class="search-bar">
-                <div class="search-bar__title-block">
-                    <h1 class="search-bar__title">Анализы</h1>
-                    <label class="switch">
-                        <input type="checkbox" />
-                        <span class="switch__icon"></span>
-                        <span>Анализы на дому</span>
-                    </label>
-                </div>
-                <div class="search-bar__form-block">
-                    <form class="search-bar__form" action="">
-                        <input class="search-bar__input" type="text" placeholder="Что вы ищете?">
-                        <button class="search-bar__submit" type="submit" title="Найти">
-                            <svg class="icon">
-                                <use xlink:href="#search"></use>
-                            </svg>
-                        </button>
-                        <label class="search-bar__select select-wrapper select-wrapper--type_3">
-                            <span class="select-wrapper__container">
-                                <select class="js-select">
-                                    <option value="1">Поиск по анализам</option>
-                                    <option value="2">Поиск по услугам</option>
-                                </select>
-                            </span>
-                        </label>
-                        <div class="search-bar__dropdown">
-                            <p class="search-bar__dropdown-title">Кто пациент?</p>
-                            <ul class="search-bar__dropdown-list">
-                                <li class="search-bar__dropdown-list-item"><button class="button button--height_2 button--type_5" type="button"><span>Мужчинам</span></button></li>
-                                <li class="search-bar__dropdown-list-item"><button class="button button--height_2 button--type_5" type="button"><span>Женщинам</span></button></li>
-                                <li class="search-bar__dropdown-list-item"><button class="button button--height_2 button--type_5" type="button"><span>Детям</span></button></li>
-                                <li class="search-bar__dropdown-list-item"><button class="button button--height_2 button--type_5" type="button"><span>Беременным</span></button></li>
-                            </ul>
-                            <p class="search-bar__dropdown-title">Категории</p>
-                            <ul class="js-search-scrooler search-bar__dropdown-list">
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                                <li class="search-bar__dropdown-list-item">
-                                    <a class="search-category" href="#">
-                                        <img src="images/content/search/img_1.jpg" srcset="images/content/search/img_1@2x.jpg 2x" alt="alt">
-                                        <span class="search-category__title">Аллергология</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </form>
-                </div>
-            </div>
+            //= template/search-bar.html
             <br><br>
             <p>Душа моя озарена <a href="#">неземной радостью</a>, как эти чудесные весенние утра, которыми я наслаждаюсь от всего сердца.</p>
             <p>Я совсем один и блаженствую в здешнем краю, словно созданном для таких, как я. Я так счастлив, мой друг, так упоен ощущением покоя, что искусство мое страдает от этого. Ни одного штриха не мог бы я сделать, а никогда не был таким
@@ -576,6 +471,54 @@
                 <button class="button button--height_4 button--type_5" type="button" disabled>Нет я кнопка!</button>
             </p>
 
+            <p>
+                <a class="button button--height_1 button--type_6" href="javascript:void(0)">Я кнопка!</a>
+                <button class="button button--height_1 button--type_6" type="button">
+                    <svg class="icon">
+                        <use xlink:href="#refresh"></use>
+                    </svg>
+                    <span>Нет я кнопка!</span>
+                </button>
+                <input class="button button--height_1 button--type_6" type="button" value="Акститесь!">
+                <button class="button button--height_1 button--type_6" type="button" disabled>Нет я кнопка!</button>
+            </p>
+
+            <p>
+                <a class="button button--height_2 button--type_6" href="javascript:void(0)">Я кнопка!</a>
+                <button class="button button--height_2 button--type_6" type="button">
+                    <svg class="icon">
+                        <use xlink:href="#refresh"></use>
+                    </svg>
+                    <span>Нет я кнопка!</span>
+                </button>
+                <input class="button button--height_2 button--type_6" type="button" value="Акститесь!">
+                <button class="button button--height_2 button--type_6" type="button" disabled>Нет я кнопка!</button>
+            </p>
+
+            <p>
+                <a class="button button--height_3 button--type_6" href="javascript:void(0)">Я кнопка!</a>
+                <button class="button button--height_3 button--type_6" type="button">
+                    <svg class="icon">
+                        <use xlink:href="#refresh"></use>
+                    </svg>
+                    <span>Нет я кнопка!</span>
+                </button>
+                <input class="button button--height_3 button--type_6" type="button" value="Акститесь!">
+                <button class="button button--height_3 button--type_6" type="button" disabled>Нет я кнопка!</button>
+            </p>
+
+            <p>
+                <a class="button button--height_4 button--type_6" href="javascript:void(0)">Я кнопка!</a>
+                <button class="button button--height_4 button--type_6" type="button">
+                    <svg class="icon">
+                        <use xlink:href="#refresh"></use>
+                    </svg>
+                    <span>Нет я кнопка!</span>
+                </button>
+                <input class="button button--height_4 button--type_6" type="button" value="Акститесь!">
+                <button class="button button--height_4 button--type_6" type="button" disabled>Нет я кнопка!</button>
+            </p>
+
             <h6>Радио группы</h6>
 
             <div class="group-buttons">
@@ -790,6 +733,9 @@
                 <li class="tags__item"><a class="tags__button" href="#">Зоб</a></li>
             </ul>
 
+            <br><br>
+
+            //= template/map-block.html
 
         </div>
     </div>
@@ -802,6 +748,8 @@
     //= template/scripts.html
 
     <!--скрипты страницы-->
+    <script src="js/search.js"></script>
+    <script src="js/clinics-map.js"></script>
 
     <!--прелоадер-->
     <script src="js/preloader.js"></script>
