--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
     <ol>
         <li><a href="main.html" target="_blank">Главная</a></li>
 
+        <li><a href="analyzes.html" target="_blank">Анализы</a></li>
+
         <li><a href="text.html" target="_blank">Текстовая</a></li>
     </ol>
 </body>
