--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
 
         <li><a href="analysis.html" target="_blank">Анализ/комплекс детально</a></li>
 
+        <li><a href="prices.html" target="_blank">Цены</a></li>
+
         <li><a href="text.html" target="_blank">Текстовая</a></li>
     </ol>
 </body>
