--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
 
         <li><a href="prices.html" target="_blank">Цены</a></li>
 
+        <li><a href="services.html" target="_blank">Медицинские услуги</a></li>
+
         <li><a href="text.html" target="_blank">Текстовая</a></li>
     </ol>
 </body>
