--- a/src/services.html
+++ b/src/services.html
@@ -128,12 +128,9 @@
                 </li>
             </ul>
 
-            <h2>Поиск по направлениям</h2>
-
-            <div class="lists-block">
-                <div class="lists-block__nav">
-                    <button class="lists-block__nav-button is-active" type="button" data-target="1">Направления</button>
-                    <button class="lists-block__nav-button" type="button" data-target="2">Заболевания</button>
+            <div class="title-block">
+                <h2>Отделения и кабинеты</h2>
+                <div class="title-block__controls">
                     <a class="button button--type_3 button--height_4" href="#">
                         <span>Каталог цен</span>
                         <svg class="icon">
@@ -141,42 +138,116 @@
                         </svg>
                     </a>
                 </div>
-                <div class="lists-block__tab is-active" data-target="1">
-                    <ul class="lists-block__list">
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Урология</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Гинекология</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Офтальмология</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Эндокринология</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Гастроэнтерология</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Онкология</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Дерматология</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Комплексное обследование</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Неврология</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Нефрология</a></li>
-                    </ul>
-                </div>
-                <div class="lists-block__tab" data-target="2">
-                    <ul class="lists-block__list">
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Заболевания опорно-двигательного аппарата</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Заболевания сердечно-сосудистой системы</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Хронические заболевания органов дыхания</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Заболевания желудочно-кишечного тракта</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Заболевания эндокринной системы</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Заболевания нервной системы</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Гинекологические заболевания</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Урологические и андрологические заболевания</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Заболевания дерматологические</a></li>
-                        <li class="lists-block__list-item"><a class="lists-block__link" href="#">Системные заболевания</a></li>
-                    </ul>
-                    <p class="text-center">
-                        <a class="button button--type_3 button--height_4" href="#">
-                            <span>Все заболевания</span>
+            </div>
+
+            <div class="lists-block">
+                <ul class="lists-block__list">
+                    <li class="lists-block__list-item"><a class="lists-block__link" href="#">Урология</a></li>
+                    <li class="lists-block__list-item"><a class="lists-block__link" href="#">Гинекология</a></li>
+                    <li class="lists-block__list-item"><a class="lists-block__link" href="#">Офтальмология</a></li>
+                    <li class="lists-block__list-item"><a class="lists-block__link" href="#">Эндокринология</a></li>
+                    <li class="lists-block__list-item"><a class="lists-block__link" href="#">Гастроэнтерология</a></li>
+                    <li class="lists-block__list-item"><a class="lists-block__link" href="#">Онкология</a></li>
+                    <li class="lists-block__list-item"><a class="lists-block__link" href="#">Дерматология</a></li>
+                    <li class="lists-block__list-item"><a class="lists-block__link" href="#">Комплексное обследование</a></li>
+                    <li class="lists-block__list-item"><a class="lists-block__link" href="#">Неврология</a></li>
+                    <li class="lists-block__list-item"><a class="lists-block__link" href="#">Нефрология</a></li>
+                </ul>
+            </div>
+
+            <h2>Какие заболевания мы лечим</h2>
+
+            <div class="lists-block">
+                <ul class="lists-block__list">
+                    <li class="lists-block__list-item">
+                        <a class="lists-block__link" href="#">
+                            Заболевания опорно-двигательного аппарата
                             <svg class="icon">
-                                <use xlink:href="#arrow_right"></use>
+                                <use xlink:href="#issue_1"></use>
                             </svg>
                         </a>
-                    </p>
-                </div>
+                    </li>
+                    <li class="lists-block__list-item">
+                        <a class="lists-block__link" href="#">
+                            Заболевания сердечно-сосудистой системы
+                            <svg class="icon">
+                                <use xlink:href="#issue_2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="lists-block__list-item">
+                        <a class="lists-block__link" href="#">
+                            Хронические заболевания органов дыхания
+                            <svg class="icon">
+                                <use xlink:href="#issue_3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="lists-block__list-item">
+                        <a class="lists-block__link" href="#">
+                            Заболевания желудочно-кишечного тракта
+                            <svg class="icon">
+                                <use xlink:href="#issue_4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="lists-block__list-item">
+                        <a class="lists-block__link" href="#">
+                            Заболевания эндокринной системы
+                            <svg class="icon">
+                                <use xlink:href="#issue_5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="lists-block__list-item">
+                        <a class="lists-block__link" href="#">
+                            Заболевания нервной системы
+                            <svg class="icon">
+                                <use xlink:href="#issue_6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="lists-block__list-item">
+                        <a class="lists-block__link" href="#">
+                            Гинекологические заболевания
+                            <svg class="icon">
+                                <use xlink:href="#issue_7"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="lists-block__list-item">
+                        <a class="lists-block__link" href="#">
+                            Урологические и андрологические заболевания
+                            <svg class="icon">
+                                <use xlink:href="#issue_8"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="lists-block__list-item">
+                        <a class="lists-block__link" href="#">
+                            Заболевания дерматологические
+                            <svg class="icon">
+                                <use xlink:href="#issue_9"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="lists-block__list-item">
+                        <a class="lists-block__link" href="#">
+                            Системные заболевания
+                            <svg class="icon">
+                                <use xlink:href="#issue_10"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+                <p class="text-center">
+                    <a class="button button--type_3 button--height_4" href="#">
+                        <span>Все заболевания</span>
+                        <svg class="icon">
+                            <use xlink:href="#arrow_right"></use>
+                        </svg>
+                    </a>
+                </p>
             </div>
 
             <div class="title-block">
