--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@
 
         <li><a href="services.html" target="_blank">Медицинские услуги</a></li>
 
+        <li><a href="covid.html" target="_blank">Медицинские услуги - COVID-19</a></li>
+
         <li><a href="text.html" target="_blank">Текстовая</a></li>
     </ol>
 </body>
