--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,18 @@
 
         <li><a href="covid.html" target="_blank">Медицинские услуги - COVID-19</a></li>
 
+        <li><a href="online-record.html" target="_blank">Онлайн-запись на прием</a></li>
+
+        <li><a href="way.html" target="_blank">Направление</a></li>
+
+        <li><a href="service.html" target="_blank">Услуга</a></li>
+
+        <li><a href="service_2.html" target="_blank">Выезд на дом</a></li>
+
+        <li><a href="service_3.html" target="_blank">Контент страница услуги</a></li>
+
+        <li><a href="issue.html" target="_blank">Заболевание</a></li>
+
         <li><a href="text.html" target="_blank">Текстовая</a></li>
     </ol>
 </body>
