--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,16 @@
 
         <li><a href="issue.html" target="_blank">Заболевание</a></li>
 
+        <li><a href="consult.html" target="_blank">Запись на консультацию - 1 шаг</a></li>
+
+        <li><a href="consult_2.html" target="_blank">Запись на консультацию - 2 шаг</a></li>
+
+        <li><a href="consult_3.html" target="_blank">Запись на консультацию - 3 шаг</a></li>
+
+        <li><a href="consult_4.html" target="_blank">Запись на консультацию - 4 шаг</a></li>
+
+        <li><a href="consult_5.html" target="_blank">Запись на консультацию - 5 шаг</a></li>
+
         <li><a href="text.html" target="_blank">Текстовая</a></li>
     </ol>
 </body>
